src/executables/esql_grammar.output
Terminals unused in grammar

   ADD
   ALL
   AND
   AS
   ASC
   ATTRIBUTE
   AVG
   BAD_TOKEN
   BOGUS_ECHO
   BETWEEN
   CHANGE
   CHARACTER
   CHECK_
   CLASS
   COUNT
   CURRENT
   DATE_
   DATE_LIT
   DEFAULT
   DESC
   DIFFERENCE_
   DISTINCT
   EQ
   ESCAPE
   EXCEPT
   EXISTS
   FILE_
   FILE_PATH_LIT
   FUNCTION_
   GEQ
   GROUP_
   GT
   HAVING
   IN_
   INDEX
   INHERIT
   INTEGER
   INTERSECTION
   INT_LIT
   IS
   LDBVCLASS
   LEQ
   LIKE
   LT
   MAX_
   METHOD
   MIN_
   MINUS
   MONEY_LIT
   MULTISET_OF
   NEQ
   NULL_
   NUMERIC
   OF
   OID_
   OPTION
   OR
   ORDER
   PLUS
   PRECISION
   PRIVILEGES
   PUBLIC_
   READ_ONLY_
   REAL
   REAL_LIT
   SEQUENCE_OF
   SETEQ
   SETNEQ
   SET_OF
   SHARED
   SLASH
   SMALLINT
   SOME
   STATISTICS
   STRING
   SUBCLASS
   SUBSET
   SUBSETEQ
   SUM
   SUPERCLASS
   SUPERSET
   SUPERSETEQ
   TABLE
   TIME
   TIMESTAMP
   TIME_LIT
   UNIQUE
   USER
   UTIME
   VARBIT_
   VCLASS
   VIEW
   WHERE
   UNION
   STRUCT


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: opt_embedded_chunk_list

    2 opt_embedded_chunk_list: %empty
    3                        | embedded_chunk_list

    4 embedded_chunk_list: embedded_chunk_list embedded_chunk
    5                    | embedded_chunk

    6 $@1: %empty

    7 embedded_chunk: chunk_header $@1 chunk_body

    8 $@2: %empty

    9 $@3: %empty

   10 embedded_chunk: '{' $@2 opt_embedded_chunk_list $@3 '}'

   11 chunk_header: exec sql

   12 chunk_body: declare_section ';'
   13           | esql_statement ';'

   14 exec: EXEC

   15 sql: SQLX

   16 $@4: %empty

   17 $@5: %empty

   18 declare_section: BEGIN_ DECLARE SECTION ';' $@4 declare_section_body $@5 exec sql END DECLARE SECTION

   19 esql_statement: opt_repeated embedded_statement
   20               | opt_repeated declare_cursor_statement

   21 $@6: %empty

   22 esql_statement: opt_repeated $@6 csql_statement

   23 opt_repeated: %empty
   24             | REPEATED

   25 embedded_statement: whenever_statement
   26                   | connect_statement
   27                   | disconnect_statement
   28                   | open_statement
   29                   | close_statement
   30                   | describe_statement
   31                   | prepare_statement
   32                   | execute_statement
   33                   | fetch_statement
   34                   | INCLUDE SQLCA
   35                   | INCLUDE SQLDA
   36                   | commit_statement
   37                   | rollback_statement

   38 whenever_statement: WHENEVER whenever_action

   39 of_whenever_state: SQLWARNING_
   40                  | SQLERROR_
   41                  | NOT FOUND

   42 whenever_action: of_whenever_state CONTINUE_
   43                | of_whenever_state STOP_
   44                | of_whenever_state GOTO_ opt_COLON IDENTIFIER
   45                | of_whenever_state GO TO opt_COLON IDENTIFIER
   46                | of_whenever_state CALL_ IDENTIFIER

   47 opt_COLON: %empty
   48          | ':'

   49 connect_statement: CONNECT quasi_string_const opt_id_by_quasi

   50 opt_id_by_quasi: %empty
   51                | IDENTIFIED BY quasi_string_const opt_with_quasi

   52 opt_with_quasi: %empty
   53               | WITH quasi_string_const

   54 disconnect_statement: DISCONNECT

   55 declare_cursor_statement: DECLARE IDENTIFIER CURSOR_ FOR cursor_query_statement
   56                         | DECLARE IDENTIFIER CURSOR_ FOR dynamic_statement

   57 dynamic_statement: IDENTIFIER

   58 open_statement: OPEN cursor opt_for_read_only using_part

   59 opt_for_read_only: %empty
   60                  | FOR READ ONLY

   61 using_part: %empty
   62           | USING host_variable_lod

   63 descriptor_name: host_variable_wo_indicator

   64 close_statement: CLOSE cursor

   65 cursor: IDENTIFIER

   66 describe_statement: DESCRIBE dynamic_statement INTO descriptor_name
   67                   | DESCRIBE OBJECT host_variable_wo_indicator ON_ id_list_ INTO descriptor_name

   68 prepare_statement: PREPARE dynamic_statement FROM quasi_string_const

   69 $@7: %empty

   70 into_result: of_into_to $@7 host_variable_lod

   71 of_into_to: INTO
   72           | TO

   73 host_variable_lod: host_variable_list
   74                  | DESCRIPTOR descriptor_name

   75 quasi_string_const: STRING_LIT
   76                   | host_variable_wo_indicator

   77 $@8: %empty

   78 host_variable_list: $@8 host_variable_list_tail

   79 $@9: %empty

   80 host_variable_wo_indicator: $@9 host_var_w_opt_indicator

   81 id_list_: id_list_ ',' IDENTIFIER
   82         | IDENTIFIER

   83 execute_statement: EXECUTE dynamic_statement using_part opt_into_result
   84                  | EXECUTE IMMEDIATE quasi_string_const

   85 opt_into_result: %empty
   86                | into_result

   87 fetch_statement: FETCH cursor into_result
   88                | FETCH OBJECT host_variable_wo_indicator ON_ id_list_ into_result

   89 commit_statement: COMMIT opt_work

   90 opt_work: %empty
   91         | WORK

   92 rollback_statement: ROLLBACK opt_work

   93 csql_statement_head: ALTER
   94                    | ATTACH
   95                    | CALL_
   96                    | CREATE
   97                    | DROP
   98                    | END
   99                    | EVALUATE
  100                    | EXCLUDE
  101                    | FOR
  102                    | GET
  103                    | GRANT
  104                    | INSERT
  105                    | ON_
  106                    | REGISTER_
  107                    | RENAME
  108                    | REVOKE
  109                    | SELECT
  110                    | SET
  111                    | TRIGGER
  112                    | USE
  113                    | DELETE_
  114                    | UPDATE

  115 $@10: %empty

  116 $@11: %empty

  117 csql_statement: $@10 csql_statement_head $@11 csql_statement_tail

  118 declare_section_body: opt_ext_decl_list

  119 opt_ext_decl_list: %empty
  120                  | ext_decl_list

  121 ext_decl_list: ext_decl_list external_declaration
  122              | external_declaration

  123 $@12: %empty

  124 $@13: %empty

  125 external_declaration: $@12 opt_specifier_list optional_declarators $@13 end_declarator_list

  126 opt_specifier_list: %empty
  127                   | specifier_list

  128 optional_declarators: %empty
  129                     | init_declarator_list

  130 end_declarator_list: nS_td ';'

  131 specifier_list: specifier_list specifier_
  132               | specifier_

  133 specifier_: storage_class_specifier
  134           | type_specifier
  135           | type_qualifier

  136 storage_class_specifier: TYPEDEF_
  137                        | EXTERN_
  138                        | STATIC_
  139                        | AUTO_
  140                        | REGISTER_

  141 type_specifier: nS_ntd base_type_specifier
  142               | type_adjective
  143               | struct_specifier
  144               | enum_specifier

  145 base_type_specifier: VOID_
  146                    | CHAR_
  147                    | INT_
  148                    | FLOAT_
  149                    | DOUBLE_
  150                    | TYPEDEF_NAME
  151                    | VARCHAR_
  152                    | BIT_ opt_varying

  153 opt_varying: %empty
  154            | VARYING

  155 type_adjective: SHORT_
  156               | LONG_
  157               | SIGNED_
  158               | UNSIGNED_

  159 type_qualifier: CONST_
  160               | VOLATILE_

  161 $@14: %empty

  162 struct_specifier: nS_ntd of_struct_union $@14 struct_specifier_body

  163 $@15: %empty

  164 struct_specifier: nS_ntd of_struct_union struct_tag $@15 opt_struct_specifier_body

  165 of_struct_union: STRUCT_
  166                | UNION_

  167 opt_struct_specifier_body: %empty
  168                          | struct_specifier_body

  169 $@16: %empty

  170 $@17: %empty

  171 struct_specifier_body: nS_td '{' $@16 struct_declaration_list $@17 '}'

  172 struct_tag: IDENTIFIER

  173 struct_declaration_list: struct_declaration_list struct_declaration
  174                        | struct_declaration

  175 $@18: %empty

  176 struct_declaration: specifier_qualifier_list optional_struct_declarator_list $@18 end_declarator_list

  177 $@19: %empty

  178 specifier_qualifier_list: $@19 specifier_list

  179 optional_struct_declarator_list: %empty
  180                                | struct_declarator_list

  181 struct_declarator_list: struct_declarator_list ',' struct_declarator
  182                       | struct_declarator

  183 $@20: %empty

  184 struct_declarator: ':' $@20 c_expression

  185 $@21: %empty

  186 struct_declarator: declarator_ ':' $@21 c_expression
  187                  | declarator_

  188 enum_specifier: ENUM '{' enumerator_list '}'
  189               | ENUM identifier optional_enumerator_list

  190 optional_enumerator_list: %empty
  191                         | '{' enumerator_list '}'

  192 enumerator_list: enumerator_list ',' enumerator
  193                | enumerator

  194 enumerator: identifier

  195 $@22: %empty

  196 enumerator: identifier '=' $@22 c_expression

  197 init_declarator_list: init_declarator_list ',' init_declarator
  198                     | init_declarator

  199 init_declarator: declarator_

  200 $@23: %empty

  201 init_declarator: declarator_ nS_td '=' $@23 c_expression nS_ntd

  202 declarator_: direct_declarator
  203            | pointer declarator_

  204 $@24: %empty

  205 direct_declarator: IDENTIFIER $@24 opt_param_spec_list

  206 $@25: %empty

  207 direct_declarator: '(' declarator_ ')' $@25 opt_param_spec_list

  208 opt_param_spec_list: %empty
  209                    | param_spec_list

  210 param_spec_list: param_spec_list param_spec
  211                | param_spec_list c_subscript
  212                | param_spec
  213                | c_subscript

  214 pointer: '*' opt_type_qualifier_list

  215 opt_type_qualifier_list: %empty
  216                        | type_qualifier_list

  217 type_qualifier_list: type_qualifier_list type_qualifier
  218                    | type_qualifier

  219 param_spec: '(' ')'
  220           | '(' push_name_scope param_type_list pop_name_scope ')'
  221           | '(' push_name_scope id_list_ pop_name_scope ')'

  222 push_name_scope: %empty

  223 pop_name_scope: %empty

  224 push_spec_scope: %empty

  225 pop_spec_scope: %empty

  226 param_type_list: push_spec_scope parameter_list pop_spec_scope

  227 parameter_list: parameter_declaration trailing_params
  228               | parameter_declaration

  229 trailing_params: param_decl_tail_list
  230                | ',' ELLIPSIS

  231 param_decl_tail_list: param_decl_tail_list ',' parameter_declaration
  232                     | ',' parameter_declaration

  233 $@26: %empty

  234 parameter_declaration: $@26 specifier_list opt_abstract_declarator nS_td

  235 opt_abstract_declarator: %empty
  236                        | abstract_declarator

  237 abstract_declarator: pointer opt_abstract_declarator
  238                    | direct_abstract_declarator

  239 $@27: %empty

  240 direct_abstract_declarator: '(' abstract_declarator ')' $@27 opt_direct_adecl_tail

  241 $@28: %empty

  242 direct_abstract_declarator: '(' opt_param_type_list ')' $@28 opt_direct_adecl_tail

  243 $@29: %empty

  244 direct_abstract_declarator: IDENTIFIER $@29 opt_direct_adecl_tail

  245 $@30: %empty

  246 direct_abstract_declarator: c_subscript $@30 opt_direct_adecl_tail

  247 opt_direct_adecl_tail: %empty
  248                      | direct_adecl_tail

  249 direct_adecl_tail: direct_adecl_tail c_subscript
  250                  | direct_adecl_tail '(' opt_param_type_list ')'
  251                  | c_subscript
  252                  | '(' opt_param_type_list ')'

  253 opt_param_type_list: %empty
  254                    | param_type_list

  255 nS_ntd: %empty

  256 nS_td: %empty

  257 identifier: nS_ntd TYPEDEF_NAME nS_td
  258           | IDENTIFIER
  259           | ENUMERATION_CONSTANT

  260 $@31: %empty

  261 c_subscript: '[' $@31 c_subscript_body ']'

  262 c_subscript_body: %empty
  263                 | c_expr

  264 c_expression: c_expr

  265 c_expr: any_list

  266 any_list: any_list any
  267         | any

  268 any_expr: %empty
  269         | acs_list

  270 acs_list: acs_list of_any_comma_semi
  271         | of_any_comma_semi

  272 of_any_comma_semi: any
  273                  | ','
  274                  | ';'

  275 any: GENERIC_TOKEN
  276    | '(' any_expr ')'
  277    | '[' any_expr ']'
  278    | '{' any_expr '}'

  279 host_variable_list_tail: host_variable_list_tail ',' host_var_w_opt_indicator
  280                        | host_var_w_opt_indicator

  281 indicator_var: %empty
  282              | '#' hostvar
  283              | INDICATOR '#' hostvar
  284              | INDICATOR hostvar

  285 $@32: %empty

  286 host_var_w_opt_indicator: $@32 host_variable indicator_var

  287 $@33: %empty

  288 host_variable: ':' $@33 hostvar

  289 hostvar: host_ref
  290        | '*' CONST_ hostvar
  291        | '*' VOLATILE_ hostvar
  292        | '*' hostvar
  293        | '&' host_ref

  294 $@34: %empty

  295 host_ref: IDENTIFIER $@34 opt_host_ref_tail

  296 $@35: %empty

  297 host_ref: '(' hostvar ')' $@35 opt_host_ref_tail

  298 opt_host_ref_tail: %empty
  299                  | host_ref_tail

  300 host_ref_tail: host_ref_tail host_var_subscript
  301              | host_ref_tail '.' IDENTIFIER
  302              | host_ref_tail PTR_OP IDENTIFIER
  303              | host_var_subscript
  304              | '.' IDENTIFIER
  305              | PTR_OP IDENTIFIER

  306 $@36: %empty

  307 host_var_subscript: '[' $@36 host_var_subscript_body

  308 host_var_subscript_body: opt_hv_sub_list ']'

  309 $@37: %empty

  310 hv_sub: '(' $@37 opt_hv_sub_list ')'

  311 $@38: %empty

  312 hv_sub: '[' $@38 opt_hv_sub_list ']'

  313 $@39: %empty

  314 hv_sub: '{' $@39 opt_hv_sub_list '}'

  315 opt_hv_sub_list: %empty
  316                | hv_sub_list

  317 hv_sub_list: hv_sub_list hv_sub
  318            | hv_sub

  319 csql_statement_tail: opt_buffer_sql_list

  320 opt_buffer_sql_list: %empty
  321                    | buffer_sql_list

  322 buffer_sql_list: buffer_sql_list buffer_sql
  323                | buffer_sql

  324 buffer_sql: host_var_w_opt_indicator
  325           | DESCRIPTOR host_variable_wo_indicator
  326           | var_mode_follow_set

  327 var_mode_follow_set: '*'
  328                    | ','
  329                    | '('
  330                    | ')'
  331                    | '{'
  332                    | '}'
  333                    | GENERIC_TOKEN
  334                    | IDENTIFIER
  335                    | INTO
  336                    | TO
  337                    | FROM
  338                    | SELECT
  339                    | VALUES
  340                    | ON_
  341                    | WITH

  342 $@40: %empty

  343 cursor_query_statement: $@40 of_select_lp opt_buffer_sql_list

  344 of_select_lp: SELECT
  345             | '('


Terminals, with rules where they appear

$end (0) 0
'#' (35) 282 283
'&' (38) 293
'(' (40) 207 219 220 221 240 242 250 252 276 297 310 329 345
')' (41) 207 219 220 221 240 242 250 252 276 297 310 330
'*' (42) 214 290 291 292 327
',' (44) 81 181 192 197 230 231 232 273 279 328
'.' (46) 301 304
':' (58) 48 184 186 288
';' (59) 12 13 18 130 274
'=' (61) 196 201
'[' (91) 261 277 307 312
']' (93) 261 277 308 312
'{' (123) 10 171 188 191 278 314 331
'}' (125) 10 171 188 191 278 314 332
error (256)
ADD (258)
ALL (259)
ALTER (260) 93
AND (261)
AS (262)
ASC (263)
ATTRIBUTE (264)
ATTACH (265) 94
AUTO_ (266) 139
AVG (267)
BAD_TOKEN (268)
BOGUS_ECHO (269)
BEGIN_ (270) 18
BETWEEN (271)
BIT_ (272) 152
BY (273) 51
CALL_ (274) 46 95
CHANGE (275)
CHAR_ (276) 146
CHARACTER (277)
CHECK_ (278)
CLASS (279)
CLOSE (280) 64
COMMIT (281) 89
CONNECT (282) 49
CONST_ (283) 159 290
CONTINUE_ (284) 42
COUNT (285)
CREATE (286) 96
CURRENT (287)
CURSOR_ (288) 55 56
DATE_ (289)
DATE_LIT (290)
DECLARE (291) 18 55 56
DEFAULT (292)
DELETE_ (293) 113
DESC (294)
DESCRIBE (295) 66 67
DESCRIPTOR (296) 74 325
DIFFERENCE_ (297)
DISCONNECT (298) 54
DISTINCT (299)
DOUBLE_ (300) 149
DROP (301) 97
ELLIPSIS (302) 230
END (303) 18 98
ENUM (304) 188 189
EQ (305)
ESCAPE (306)
EVALUATE (307) 99
EXCEPT (308)
EXCLUDE (309) 100
EXECUTE (310) 83 84
EXISTS (311)
EXTERN_ (312) 137
FETCH (313) 87 88
FILE_ (314)
FILE_PATH_LIT (315)
FLOAT_ (316) 148
FOR (317) 55 56 60 101
FOUND (318) 41
FROM (319) 68 337
FUNCTION_ (320)
GENERIC_TOKEN (321) 275 333
GEQ (322)
GET (323) 102
GO (324) 45
GOTO_ (325) 44
GRANT (326) 103
GROUP_ (327)
GT (328)
HAVING (329)
IDENTIFIED (330) 51
IMMEDIATE (331) 84
IN_ (332)
INCLUDE (333) 34 35
INDEX (334)
INDICATOR (335) 283 284
INHERIT (336)
INSERT (337) 104
INTEGER (338)
INTERSECTION (339)
INTO (340) 66 67 71 335
INT_ (341) 147
INT_LIT (342)
IS (343)
LDBVCLASS (344)
LEQ (345)
LIKE (346)
LONG_ (347) 156
LT (348)
MAX_ (349)
METHOD (350)
MIN_ (351)
MINUS (352)
MONEY_LIT (353)
MULTISET_OF (354)
NEQ (355)
NOT (356) 41
NULL_ (357)
NUMERIC (358)
OBJECT (359) 67 88
OF (360)
OID_ (361)
ON_ (362) 67 88 105 340
ONLY (363) 60
OPEN (364) 58
OPTION (365)
OR (366)
ORDER (367)
PLUS (368)
PRECISION (369)
PREPARE (370) 68
PRIVILEGES (371)
PTR_OP (372) 302 305
PUBLIC_ (373)
READ (374) 60
READ_ONLY_ (375)
REAL (376)
REAL_LIT (377)
REGISTER_ (378) 106 140
RENAME (379) 107
REPEATED (380) 24
REVOKE (381) 108
ROLLBACK (382) 92
SECTION (383) 18
SELECT (384) 109 338 344
SEQUENCE_OF (385)
SET (386) 110
SETEQ (387)
SETNEQ (388)
SET_OF (389)
SHARED (390)
SHORT_ (391) 155
SIGNED_ (392) 157
SLASH (393)
SMALLINT (394)
SOME (395)
SQLCA (396) 34
SQLDA (397) 35
SQLERROR_ (398) 40
SQLWARNING_ (399) 39
STATIC_ (400) 138
STATISTICS (401)
STOP_ (402) 43
STRING (403)
STRUCT_ (404) 165
SUBCLASS (405)
SUBSET (406)
SUBSETEQ (407)
SUM (408)
SUPERCLASS (409)
SUPERSET (410)
SUPERSETEQ (411)
TABLE (412)
TIME (413)
TIMESTAMP (414)
TIME_LIT (415)
TO (416) 45 72 336
TRIGGER (417) 111
TYPEDEF_ (418) 136
UNION_ (419) 166
UNIQUE (420)
UNSIGNED_ (421) 158
UPDATE (422) 114
USE (423) 112
USER (424)
USING (425) 62
UTIME (426)
VALUES (427) 339
VARBIT_ (428)
VARCHAR_ (429) 151
VARYING (430) 154
VCLASS (431)
VIEW (432)
VOID_ (433) 145
VOLATILE_ (434) 160 291
WHENEVER (435) 38
WHERE (436)
WITH (437) 53 341
WORK (438) 91
ENUMERATION_CONSTANT (439) 259
TYPEDEF_NAME (440) 150 257
STRING_LIT (441) 75
IDENTIFIER (442) 44 45 46 55 56 57 65 81 82 172 205 244 258 295 301
    302 304 305 334
EXEC (443) 14
SQLX (444) 15
UNION (445)
STRUCT (446)


Nonterminals, with rules where they appear

$accept (206)
    on left: 0
translation_unit (207)
    on left: 1, on right: 0
opt_embedded_chunk_list (208)
    on left: 2 3, on right: 1 10
embedded_chunk_list (209)
    on left: 4 5, on right: 3 4
embedded_chunk (210)
    on left: 7 10, on right: 4 5
$@1 (211)
    on left: 6, on right: 7
$@2 (212)
    on left: 8, on right: 10
$@3 (213)
    on left: 9, on right: 10
chunk_header (214)
    on left: 11, on right: 7
chunk_body (215)
    on left: 12 13, on right: 7
exec (216)
    on left: 14, on right: 11 18
sql (217)
    on left: 15, on right: 11 18
declare_section (218)
    on left: 18, on right: 12
$@4 (219)
    on left: 16, on right: 18
$@5 (220)
    on left: 17, on right: 18
esql_statement (221)
    on left: 19 20 22, on right: 13
$@6 (222)
    on left: 21, on right: 22
opt_repeated (223)
    on left: 23 24, on right: 19 20 22
embedded_statement (224)
    on left: 25 26 27 28 29 30 31 32 33 34 35 36 37, on right: 19
whenever_statement (225)
    on left: 38, on right: 25
of_whenever_state (226)
    on left: 39 40 41, on right: 42 43 44 45 46
whenever_action (227)
    on left: 42 43 44 45 46, on right: 38
opt_COLON (228)
    on left: 47 48, on right: 44 45
connect_statement (229)
    on left: 49, on right: 26
opt_id_by_quasi (230)
    on left: 50 51, on right: 49
opt_with_quasi (231)
    on left: 52 53, on right: 51
disconnect_statement (232)
    on left: 54, on right: 27
declare_cursor_statement (233)
    on left: 55 56, on right: 20
dynamic_statement (234)
    on left: 57, on right: 56 66 68 83
open_statement (235)
    on left: 58, on right: 28
opt_for_read_only (236)
    on left: 59 60, on right: 58
using_part (237)
    on left: 61 62, on right: 58 83
descriptor_name (238)
    on left: 63, on right: 66 67 74
close_statement (239)
    on left: 64, on right: 29
cursor (240)
    on left: 65, on right: 58 64 87
describe_statement (241)
    on left: 66 67, on right: 30
prepare_statement (242)
    on left: 68, on right: 31
into_result (243)
    on left: 70, on right: 86 87 88
$@7 (244)
    on left: 69, on right: 70
of_into_to (245)
    on left: 71 72, on right: 70
host_variable_lod (246)
    on left: 73 74, on right: 62 70
quasi_string_const (247)
    on left: 75 76, on right: 49 51 53 68 84
host_variable_list (248)
    on left: 78, on right: 73
$@8 (249)
    on left: 77, on right: 78
host_variable_wo_indicator (250)
    on left: 80, on right: 63 67 76 88 325
$@9 (251)
    on left: 79, on right: 80
id_list_ (252)
    on left: 81 82, on right: 67 81 88 221
execute_statement (253)
    on left: 83 84, on right: 32
opt_into_result (254)
    on left: 85 86, on right: 83
fetch_statement (255)
    on left: 87 88, on right: 33
commit_statement (256)
    on left: 89, on right: 36
opt_work (257)
    on left: 90 91, on right: 89 92
rollback_statement (258)
    on left: 92, on right: 37
csql_statement_head (259)
    on left: 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108
    109 110 111 112 113 114, on right: 117
csql_statement (260)
    on left: 117, on right: 22
$@10 (261)
    on left: 115, on right: 117
$@11 (262)
    on left: 116, on right: 117
declare_section_body (263)
    on left: 118, on right: 18
opt_ext_decl_list (264)
    on left: 119 120, on right: 118
ext_decl_list (265)
    on left: 121 122, on right: 120 121
external_declaration (266)
    on left: 125, on right: 121 122
$@12 (267)
    on left: 123, on right: 125
$@13 (268)
    on left: 124, on right: 125
opt_specifier_list (269)
    on left: 126 127, on right: 125
optional_declarators (270)
    on left: 128 129, on right: 125
end_declarator_list (271)
    on left: 130, on right: 125 176
specifier_list (272)
    on left: 131 132, on right: 127 131 178 234
specifier_ (273)
    on left: 133 134 135, on right: 131 132
storage_class_specifier (274)
    on left: 136 137 138 139 140, on right: 133
type_specifier (275)
    on left: 141 142 143 144, on right: 134
base_type_specifier (276)
    on left: 145 146 147 148 149 150 151 152, on right: 141
opt_varying (277)
    on left: 153 154, on right: 152
type_adjective (278)
    on left: 155 156 157 158, on right: 142
type_qualifier (279)
    on left: 159 160, on right: 135 217 218
struct_specifier (280)
    on left: 162 164, on right: 143
$@14 (281)
    on left: 161, on right: 162
$@15 (282)
    on left: 163, on right: 164
of_struct_union (283)
    on left: 165 166, on right: 162 164
opt_struct_specifier_body (284)
    on left: 167 168, on right: 164
struct_specifier_body (285)
    on left: 171, on right: 162 168
$@16 (286)
    on left: 169, on right: 171
$@17 (287)
    on left: 170, on right: 171
struct_tag (288)
    on left: 172, on right: 164
struct_declaration_list (289)
    on left: 173 174, on right: 171 173
struct_declaration (290)
    on left: 176, on right: 173 174
$@18 (291)
    on left: 175, on right: 176
specifier_qualifier_list (292)
    on left: 178, on right: 176
$@19 (293)
    on left: 177, on right: 178
optional_struct_declarator_list (294)
    on left: 179 180, on right: 176
struct_declarator_list (295)
    on left: 181 182, on right: 180 181
struct_declarator (296)
    on left: 184 186 187, on right: 181 182
$@20 (297)
    on left: 183, on right: 184
$@21 (298)
    on left: 185, on right: 186
enum_specifier (299)
    on left: 188 189, on right: 144
optional_enumerator_list (300)
    on left: 190 191, on right: 189
enumerator_list (301)
    on left: 192 193, on right: 188 191 192
enumerator (302)
    on left: 194 196, on right: 192 193
$@22 (303)
    on left: 195, on right: 196
init_declarator_list (304)
    on left: 197 198, on right: 129 197
init_declarator (305)
    on left: 199 201, on right: 197 198
$@23 (306)
    on left: 200, on right: 201
declarator_ (307)
    on left: 202 203, on right: 186 187 199 201 203 207
direct_declarator (308)
    on left: 205 207, on right: 202
$@24 (309)
    on left: 204, on right: 205
$@25 (310)
    on left: 206, on right: 207
opt_param_spec_list (311)
    on left: 208 209, on right: 205 207
param_spec_list (312)
    on left: 210 211 212 213, on right: 209 210 211
pointer (313)
    on left: 214, on right: 203 237
opt_type_qualifier_list (314)
    on left: 215 216, on right: 214
type_qualifier_list (315)
    on left: 217 218, on right: 216 217
param_spec (316)
    on left: 219 220 221, on right: 210 212
push_name_scope (317)
    on left: 222, on right: 220 221
pop_name_scope (318)
    on left: 223, on right: 220 221
push_spec_scope (319)
    on left: 224, on right: 226
pop_spec_scope (320)
    on left: 225, on right: 226
param_type_list (321)
    on left: 226, on right: 220 254
parameter_list (322)
    on left: 227 228, on right: 226
trailing_params (323)
    on left: 229 230, on right: 227
param_decl_tail_list (324)
    on left: 231 232, on right: 229 231
parameter_declaration (325)
    on left: 234, on right: 227 228 231 232
$@26 (326)
    on left: 233, on right: 234
opt_abstract_declarator (327)
    on left: 235 236, on right: 234 237
abstract_declarator (328)
    on left: 237 238, on right: 236 240
direct_abstract_declarator (329)
    on left: 240 242 244 246, on right: 238
$@27 (330)
    on left: 239, on right: 240
$@28 (331)
    on left: 241, on right: 242
$@29 (332)
    on left: 243, on right: 244
$@30 (333)
    on left: 245, on right: 246
opt_direct_adecl_tail (334)
    on left: 247 248, on right: 240 242 244 246
direct_adecl_tail (335)
    on left: 249 250 251 252, on right: 248 249 250
opt_param_type_list (336)
    on left: 253 254, on right: 242 250 252
nS_ntd (337)
    on left: 255, on right: 141 162 164 201 257
nS_td (338)
    on left: 256, on right: 130 171 201 234 257
identifier (339)
    on left: 257 258 259, on right: 189 194 196
c_subscript (340)
    on left: 261, on right: 211 213 246 249 251
$@31 (341)
    on left: 260, on right: 261
c_subscript_body (342)
    on left: 262 263, on right: 261
c_expression (343)
    on left: 264, on right: 184 186 196 201
c_expr (344)
    on left: 265, on right: 263 264
any_list (345)
    on left: 266 267, on right: 265 266
any_expr (346)
    on left: 268 269, on right: 276 277 278
acs_list (347)
    on left: 270 271, on right: 269 270
of_any_comma_semi (348)
    on left: 272 273 274, on right: 270 271
any (349)
    on left: 275 276 277 278, on right: 266 267 272
host_variable_list_tail (350)
    on left: 279 280, on right: 78 279
indicator_var (351)
    on left: 281 282 283 284, on right: 286
host_var_w_opt_indicator (352)
    on left: 286, on right: 80 279 280 324
$@32 (353)
    on left: 285, on right: 286
host_variable (354)
    on left: 288, on right: 286
$@33 (355)
    on left: 287, on right: 288
hostvar (356)
    on left: 289 290 291 292 293, on right: 282 283 284 288 290 291
    292 297
host_ref (357)
    on left: 295 297, on right: 289 293
$@34 (358)
    on left: 294, on right: 295
$@35 (359)
    on left: 296, on right: 297
opt_host_ref_tail (360)
    on left: 298 299, on right: 295 297
host_ref_tail (361)
    on left: 300 301 302 303 304 305, on right: 299 300 301 302
host_var_subscript (362)
    on left: 307, on right: 300 303
$@36 (363)
    on left: 306, on right: 307
host_var_subscript_body (364)
    on left: 308, on right: 307
hv_sub (365)
    on left: 310 312 314, on right: 317 318
$@37 (366)
    on left: 309, on right: 310
$@38 (367)
    on left: 311, on right: 312
$@39 (368)
    on left: 313, on right: 314
opt_hv_sub_list (369)
    on left: 315 316, on right: 308 310 312 314
hv_sub_list (370)
    on left: 317 318, on right: 316 317
csql_statement_tail (371)
    on left: 319, on right: 117
opt_buffer_sql_list (372)
    on left: 320 321, on right: 319 343
buffer_sql_list (373)
    on left: 322 323, on right: 321 322
buffer_sql (374)
    on left: 324 325 326, on right: 322 323
var_mode_follow_set (375)
    on left: 327 328 329 330 331 332 333 334 335 336 337 338 339 340
    341, on right: 326
cursor_query_statement (376)
    on left: 343, on right: 55
$@40 (377)
    on left: 342, on right: 343
of_select_lp (378)
    on left: 344 345, on right: 343


State 0

    0 $accept: . translation_unit $end
    1 translation_unit: . opt_embedded_chunk_list
    2 opt_embedded_chunk_list: . %empty  [$end]
    3                        | . embedded_chunk_list
    4 embedded_chunk_list: . embedded_chunk_list embedded_chunk
    5                    | . embedded_chunk
    7 embedded_chunk: . chunk_header $@1 chunk_body
   10               | . '{' $@2 opt_embedded_chunk_list $@3 '}'
   11 chunk_header: . exec sql
   14 exec: . EXEC

    EXEC  shift, and go to state 1
    '{'   shift, and go to state 2

    $default  reduce using rule 2 (opt_embedded_chunk_list)

    translation_unit         go to state 3
    opt_embedded_chunk_list  go to state 4
    embedded_chunk_list      go to state 5
    embedded_chunk           go to state 6
    chunk_header             go to state 7
    exec                     go to state 8


State 1

   14 exec: EXEC .

    $default  reduce using rule 14 (exec)


State 2

    8 $@2: . %empty
   10 embedded_chunk: '{' . $@2 opt_embedded_chunk_list $@3 '}'

    $default  reduce using rule 8 ($@2)

    $@2  go to state 9


State 3

    0 $accept: translation_unit . $end

    $end  shift, and go to state 10


State 4

    1 translation_unit: opt_embedded_chunk_list .

    $default  reduce using rule 1 (translation_unit)


State 5

    3 opt_embedded_chunk_list: embedded_chunk_list .  [$end, '}']
    4 embedded_chunk_list: embedded_chunk_list . embedded_chunk
    7 embedded_chunk: . chunk_header $@1 chunk_body
   10               | . '{' $@2 opt_embedded_chunk_list $@3 '}'
   11 chunk_header: . exec sql
   14 exec: . EXEC

    EXEC  shift, and go to state 1
    '{'   shift, and go to state 2

    $default  reduce using rule 3 (opt_embedded_chunk_list)

    embedded_chunk  go to state 11
    chunk_header    go to state 7
    exec            go to state 8


State 6

    5 embedded_chunk_list: embedded_chunk .

    $default  reduce using rule 5 (embedded_chunk_list)


State 7

    6 $@1: . %empty
    7 embedded_chunk: chunk_header . $@1 chunk_body

    $default  reduce using rule 6 ($@1)

    $@1  go to state 12


State 8

   11 chunk_header: exec . sql
   15 sql: . SQLX

    SQLX  shift, and go to state 13

    sql  go to state 14


State 9
